fix: z-indexand popover issues

--- a/src/editor.scss
+++ b/src/editor.scss
@@ -259,3 +259,12 @@
 	position: relative !important;
 	width: 100%;
 }
+
+/* z-index */
+.fbl_edit-overlay {
+	z-index: 100000 !important;
+}
+.components-popover__fallback-container {
+	position: relative;
+	z-index: 100001 !important;
+}
